--- a/index.html
+++ b/index.html
@@ -7,59 +7,64 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: url('https://i.postimg.cc/VLJ28D37/PLno-1.jpg') no-repeat center center fixed;
+      background: url("https://i.postimg.cc/VLJ28D37/PLno-1.jpg") no-repeat center center;
       background-size: contain;
+      background-color: #000;
       height: 100vh;
-      overflow: hidden;
       position: relative;
       font-family: sans-serif;
     }
     .led {
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
       border-radius: 50%;
-      background-color: red; /* Estado por defecto */
+      background-color: gray;
       position: absolute;
-      box-shadow: 0 0 5px #000;
-      border: 2px solid #fff;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     }
+    /* Posiciones aproximadas */
+    #p1 { top: 45%; left: 85%; }
+    #p2 { top: 5%; left: 25%; }
+    #p3 { top: 35%; left: 10%; }
+    #p4 { bottom: 15%; right: 0%; }
+    #p5 { bottom: 15%; right: 7%; }
+    #p6 { bottom: 15%; right: 14%; }
+    #p7 { bottom: 15%; right: 21%; }
+    #p8 { bottom: 15%; right: 28%; }
+    #p9 { bottom: 15%; right: 35%; }
   </style>
 </head>
 <body>
-  <!-- Indicadores (coordenadas aproximadas, ajústalas según necesites) -->
-  <div class="led" id="p1" style="top: 50px; left: 80px;"></div>
-  <div class="led" id="p2" style="top: 120px; left: 200px;"></div>
-  <div class="led" id="p3" style="top: 200px; left: 300px;"></div>
-  <div class="led" id="p4" style="top: 280px; left: 400px;"></div>
-  <div class="led" id="p5" style="top: 360px; left: 500px;"></div>
-  <div class="led" id="p6" style="top: 440px; left: 600px;"></div>
-  <div class="led" id="p7" style="top: 520px; left: 700px;"></div>
-  <div class="led" id="p8" style="top: 600px; left: 800px;"></div>
-  <div class="led" id="p9" style="top: 680px; left: 900px;"></div>
+  <div id="p1" class="led"></div>
+  <div id="p2" class="led"></div>
+  <div id="p3" class="led"></div>
+  <div id="p4" class="led"></div>
+  <div id="p5" class="led"></div>
+  <div id="p6" class="led"></div>
+  <div id="p7" class="led"></div>
+  <div id="p8" class="led"></div>
+  <div id="p9" class="led"></div>
 
   <script>
-    // Simulación de estados de puertas
-    const estados = {
-      p1: true,
-      p2: false,
-      p3: true,
-      p4: false,
-      p5: true,
-      p6: true,
-      p7: false,
-      p8: true,
-      p9: false
-    };
+    const username = "Monitoreo_nave2";
+    const total = 9;
 
-    for (const id in estados) {
-      const el = document.getElementById(id);
-      if (estados[id]) {
-        el.style.backgroundColor = 'green';
-      } else {
-        el.style.backgroundColor = 'red';
+    async function actualizarEstados() {
+      for (let i = 1; i <= total; i++) {
+        try {
+          const res = await fetch(`https://io.adafruit.com/api/v2/${username}/feeds/puerta${i}/data/last`);
+          const data = await res.json();
+          const estado = parseInt(data.value);
+          const led = document.getElementById(`p${i}`);
+          if (led) led.style.backgroundColor = estado ? "red" : "lime";
+        } catch (e) {
+          console.error("Error al obtener puerta" + i, e);
+        }
       }
     }
+
+    actualizarEstados();
+    setInterval(actualizarEstados, 5000); // Actualiza cada 5 seg
   </script>
 </body>
 </html>
