--- a/index.html
+++ b/index.html
@@ -3,68 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Puertas Nave 2</title>
+  <title>Estado de Puertas - Nave 2</title>
   <style>
     body {
       margin: 0;
-      background: url("https://i.postimg.cc/VLJ28D37/PLno-1.jpg") no-repeat center center;
-      background-size: contain;
-      background-color: #000;
-      height: 100vh;
-      position: relative;
+      background: #000;
       font-family: sans-serif;
+      position: relative;
+    }
+    #plano {
+      width: 100%;
+      height: auto;
+      display: block;
     }
     .led {
       width: 20px;
       height: 20px;
       border-radius: 50%;
-      background-color: gray;
+      background: grey;
       position: absolute;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      border: 2px solid white;
     }
-    /* Posiciones aproximadas */
-    #p1 { top: 45%; left: 85%; }
-    #p2 { top: 5%; left: 25%; }
-    #p3 { top: 35%; left: 10%; }
-    #p4 { bottom: 15%; right: 0%; }
-    #p5 { bottom: 15%; right: 7%; }
-    #p6 { bottom: 15%; right: 14%; }
-    #p7 { bottom: 15%; right: 21%; }
-    #p8 { bottom: 15%; right: 28%; }
-    #p9 { bottom: 15%; right: 35%; }
   </style>
 </head>
 <body>
-  <div id="p1" class="led"></div>
-  <div id="p2" class="led"></div>
-  <div id="p3" class="led"></div>
-  <div id="p4" class="led"></div>
-  <div id="p5" class="led"></div>
-  <div id="p6" class="led"></div>
-  <div id="p7" class="led"></div>
-  <div id="p8" class="led"></div>
-  <div id="p9" class="led"></div>
+  <img id="plano" src="https://i.postimg.cc/VLJ28D37/PLno-1.jpg" alt="Plano">
+
+  <div id="puerta1" class="led" style="top: 50%; right: 5%;"></div>
+  <div id="puerta2" class="led" style="top: 5%; left: 25%;"></div>
+  <div id="puerta3" class="led" style="top: 55%; left: 5%;"></div>
+  <div id="puerta4" class="led" style="bottom: 15%; right: 0%;"></div>
+  <div id="puerta5" class="led" style="bottom: 15%; right: 10%;"></div>
+  <div id="puerta6" class="led" style="bottom: 15%; right: 20%;"></div>
+  <div id="puerta7" class="led" style="bottom: 15%; right: 30%;"></div>
+  <div id="puerta8" class="led" style="bottom: 15%; right: 40%;"></div>
+  <div id="puerta9" class="led" style="bottom: 15%; right: 50%;"></div>
 
   <script>
     const username = "Monitoreo_nave2";
-    const total = 9;
+    const key = "aio_wjeo12dzghgxXVQ6LX8m5I8K3ssE";
+    const feeds = [
+      "puerta1", "puerta2", "puerta3",
+      "puerta4", "puerta5", "puerta6",
+      "puerta7", "puerta8", "puerta9"
+    ];
 
-    async function actualizarEstados() {
-      for (let i = 1; i <= total; i++) {
-        try {
-          const res = await fetch(`https://io.adafruit.com/api/v2/${username}/feeds/puerta${i}/data/last`);
-          const data = await res.json();
-          const estado = parseInt(data.value);
-          const led = document.getElementById(`p${i}`);
-          if (led) led.style.backgroundColor = estado ? "red" : "lime";
-        } catch (e) {
-          console.error("Error al obtener puerta" + i, e);
-        }
+    async function updateLEDs() {
+      for (let i = 0; i < feeds.length; i++) {
+        const res = await fetch(`https://io.adafruit.com/api/v2/${username}/feeds/${feeds[i]}/data/last`, {
+          headers: { "X-AIO-Key": key }
+        });
+        const data = await res.json();
+        const valor = data.value;
+        const led = document.getElementById(feeds[i]);
+        led.style.background = valor === "1" ? "red" : "green";
       }
     }
 
-    actualizarEstados();
-    setInterval(actualizarEstados, 5000); // Actualiza cada 5 seg
+    updateLEDs();
+    setInterval(updateLEDs, 10000);
   </script>
 </body>
 </html>
